--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,2 +1,2 @@
 add_executable(simple_example simple_example.cpp)
-target_link_libraries(simple_example HelloWorldPrinter)
+target_link_libraries(simple_example ${MPI_LIBRARIES})
